--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
       }
     },
     {
-      "files": ["index.js"],
+      "files": ["**/*.js"],
       "rules": {
         "lines-around-comment": "error"
       }
