--- a/src-data/unused-var-ignore.yaml
+++ b/src-data/unused-var-ignore.yaml
@@ -1,3 +1,6 @@
+# p5.js functions that can be defined by user,
+# which should be ignored by the "no-unused-vars" rule.
+
 - preload
 - setup
 - draw
