--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,9 +27,10 @@
     "files.insertFinalNewline": true
   },
   "[markdown]": {
-    "editor.wordWrap": "on",
-    "editor.quickSuggestions": false,
+    "editor.defaultFormatter": "vscode.markdown-language-features",
+    "files.insertFinalNewline": true,
     "editor.tabSize": 4,
-    "files.insertFinalNewline": true
+    "editor.wordWrap": "on",
+    "editor.quickSuggestions": false
   }
 }
