--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "lib": ["ESNext"],
+    "lib": ["ES2019"],
     "moduleResolution": "node",
     "isolatedModules": true,
-    "target": "ESNext",
+    "target": "ES2019",
     "module": "CommonJS",
     "strict": true,
     "noImplicitReturns": true,
