--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,29 @@
+// See also: https://aka.ms/tsconfig.json
 {
+  "include": ["src"],
+
   "compilerOptions": {
-    "noEmit": true,
-    "lib": ["ES2019"],
-    "moduleResolution": "node",
-    "isolatedModules": true,
+    /* Basic Options */
     "target": "ES2019",
     "module": "CommonJS",
+    "isolatedModules": true,
+
+    /* Strict Type-Checking Options */
     "strict": true,
+
+    /* Additional Checks */
     "noImplicitReturns": true,
-    "newLine": "LF"
-  },
-  "include": ["src/**/*.ts"]
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+
+    /* Module Resolution Options */
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "lib": ["ES2019"],
+
+    /* Advanced Options */
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true
+  }
 }
