--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,22 @@
 {
   "env": {
     "es6": true,
-    "node": true,
-    "browser": false
+    "es2017": true,
+    "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
   "overrides": [
     {
       "files": ["src/**/*.ts"],
+      "plugins": ["@typescript-eslint"],
+      "parser": "@typescript-eslint/parser",
       "extends": [
+        "eslint:recommended",
+        "prettier",
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint"
       ],
-      "parser": "@typescript-eslint/parser",
-      "plugins": ["@typescript-eslint"],
       "rules": {
+        "no-fallthrough": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-function": "off"
       }
@@ -22,7 +24,17 @@
     {
       "files": ["**/*.js"],
       "rules": {
-        "lines-around-comment": "error"
+        "lines-around-comment": [
+          "error",
+          {
+            "beforeBlockComment": true,
+            "beforeLineComment": true,
+            "allowBlockStart": true,
+            "allowObjectStart": true,
+            "allowArrayStart": true,
+            "allowClassStart": true
+          }
+        ]
       }
     }
   ]
